--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="personal-information">
         <h2 id="intro-message">Welcome to:</h2>
         <h1 id="myname">Keegan Frieslaar</h1>
-        <p id="job-title">Junior Web Developer and Gamer</p>
+        <p id="job-title">Junior Web Developer and Gamer <img id="stick-gif" src="images/terry-2x.gif"></p>
 
         <table id="contact-information">
           <tr>
