--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
 
     <div id="about-information" style="display:none">
       <h2 class="about-header">About:</h2>
-      <p> I am an enthusiastic junior web developer. Determined, motivated and passionate about making a success of my career. I am a self starter with a positive attitude. I am excited to start my career as a web developer, especially to further develop my creative aptitude. When I am not coding, I like to spend my time gaming and playing football. I started gaming on console or Playstation 2, gradually moving along with the Playstation franchise ending on the PS4. Not long after the PS4's release, I quickly realised that PC gaming is far superior and changed immediately. Now, im constantly at my desk either coding or gaming. I see myself as a very successful game developer within the next 5 years. I have also dabbled in acting with my largest screening being an extra role in the 2012 movie shot in Cape Town, Dredd. I don't have much workplace experiance yet, but i am very eager to learn alongside those who have more experiance. A work environment within which i can learn as much as possible is what I am currently looking for at this point on my journey. I enjoy team oriented or solo work and I strive under pressure. I always work according to specifications but allow innovative ideas to take over when needed.
+      <p> I am an enthusiastic junior web developer who is determined, motivated and passionate about making a success of my career. I'm seeking an opportunity to further develop my skills and build on my work experience, in an innovative and supportive work environment. </p>
+
+<p>When I'm not coding, I like to spend my time gaming and playing football. I have also dabbled in acting and was an extra in 2011 movie, Dredd, shot in Cape Town. </p>
+
+<p>My long-term goal is to become a successful game developer!</p>
       </p>
       <h4 class="about-header">Extra:</h4>
       <p>Drivers License: Code B</p>
