--- a/index.html
+++ b/index.html
@@ -114,13 +114,12 @@
     <div id="education-information" style="display:none">
       <h2 class="edu-header">Education</h2>
       <p>Life Choices Academy — Web Development (6 months full-time course): 2017</p>
-      <p>The Lifechoices Academy is a full-time program which empowers youth from the Cape Flats with life, practical and professional development skills. We did intensive study of the following web development languages: HTML, CSS, jQuery, JavaScript and Sass. As part of our professional development, we had the opportunity to use online resources such as MOOCs, were taught Design Thinking and made use of resources for personal reflection, such as DISC profiles and SMART goal setting. Taking part in this program has been an incredible experiance for me.</p>
+      <p>The Lifechoices Academy is a full-time program which empowers youth from the Cape Flats with life, practical and professional development skills. We did intensive study of the following web development languages: HTML, CSS, jQuery, JavaScript and Sass. As part of our professional development, we had the opportunity to use online resources such as MOOCs, were taught Design Thinking and made use of resources for personal reflection, such as DISC profiles and SMART goal setting. Taking part in this program has been an incredible experience for me.</p>
       <p>High School: Bergvliet High
       Matric 2016- Bachelors pass</p>
       <p class="references">References:<br>
-        Candice Amon-021 696 4157  (Life Choices Academy)
-        <br>
-        Bergvliet High-021 712 0284<p>
+        Candice Amon-021 696 4157  (Life Choices Academy)</p>
+
         <button class="btn btn-primary scroll-top" data-scroll="up" type="button"><img class="arrow" src="images/arrow-up.png"></button>
     </div>
 
